- Fix #68 Need centered vertically \"Search\" field for IE7 browser - Fix #74 Checkboxes and items should be aligned into one line - Fix #76 The \"Advancet Search \" page. All checkboxes should be aligned into one line

--- a/project/media/styles/materials.css
+++ b/project/media/styles/materials.css
@@ -576,6 +576,14 @@
   margin-left: 17px;
 }
 
+.advanced-search .filter dd.not-collapsible {
+  padding-left: 17px;
+}
+
+.advanced-search .filter dd.not-collapsible label {
+  margin-left: 0px;
+}
+
 .advanced-search .filter dd.collapsible ul {
   list-style-type: none;
   margin: 0;
